# minibooru

./: .gitignore  Cargo.toml  NOTES.md  README.md  TODO.md  flake.nix
dev/: docker-compose.yml  gen-db.sql  minibooru.conf  run.sh
docs/: example.conf
migrations/: 20240626104015_create_groups.sql  20240626111713_create_users.sql  20240626113239_create_sessions.sql  20240626114115_create_posts.sql  20240701092133_create_posts.sql  20240707141726_create_admin_settings.sql  20240711065758_create_tags.sql  20240712032952_create_pools.sql  20240712034453_create_user_votes.sql  20240712034937_create_user_favourites.sql
src/: auth.rs  config.rs  error.rs  extractors.rs  main.rs  posts.rs  query.rs  traits.rs
static/: auth.js  stylesheet.css  upload.js  upload_worker.js
templates/: auth.html  first_run.html  index.html  post.html  posts.html  upload.html
templates/components/: base.html  post_child_nav.html  search_pane.html
