[package]
name = "minibooru"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.86"
axum = "0.7.5"
askama_axum = "0.4.0"
tower-http = { version = "0.5.2", features = ["fs"] }
